style.css
/* START BROKEN LINK CHECKER STYLES */

.brokenLinkCheckWrap {
	max-height: 100%;
}

.brokenLinkCheckWrap .TableListRepeaterAdd_1_fxd_v11-2-0 {
	display: none;
}

.brokenLinkCheckWrap .TableListRow_VfExz_v11-2-0 div {
	line-height: 1.4em;
	word-break: break-word;
}

.brokenLinkCheckWrap [class*=Banner] {
	padding-left: 10px !important;
}

.brokenLinkCheckWrap [class*=Banner] [class*=Content] {
    width: 100%;
}

.brokenLinkCheckWrap .blcTooltipWrapper {
	line-height: 1.3em;
	white-space: normal;
	overflow-wrap: break-word;
}

.brokenLinkCheckWrap .blcTruncate {
	display: block;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

/* END BROKEN LINK CHECKER STYLES */

/* START STYLES FROM NOTES ADDON */
.PromotePinned svg {
	stroke-width: 2px;
}

.Theme__Dark .PromotePinned:hover svg {
	stroke: #fff !important;
}

.PromotePinned strong {
	font-weight: 700;
	color: #C7C4C4;
	margin: 0 0 0 5px;
}

.Theme__Dark .PromotePinned strong {
	color: #434344;
}

.Theme__Light .PromotePinned:hover strong {
	color: #9f9c9c;
}

.Theme__Dark .PromotePinned:hover strong {
	color: #fff;
}

.PromotePinned.--Enabled strong {
	color: #F0CE15;
}

.PromotePinned.--Enabled svg {
	stroke: #F0CE15 !important;
}

.Note {
	position: relative;
}

.NoteButtons {
	transition: opacity .1s ease;
	position: absolute;
	top: 20px;
	right: 0;
	pointer-events: none;
	opacity: 0;
}

.__Pinned .NoteButtons {
	pointer-events: auto;
	opacity: 1;
	right: 20px;
}

.__Pinned .NoteButtons .Trash {
	display: none;
}

.Note:hover .NoteButtons {
	opacity: 1;
	pointer-events: auto;
}

.Note:hover .NoteButtons,
.Note:hover .NoteButtons * {
	cursor: pointer;
}

.NoteButtons span {
	margin-left: 11px;
}

.NoteButtons .Trash svg {
	width: 15px;
	height: 16px;
	fill: #EF4E65;
}

.NoteButtons .Trash:hover svg {
	fill: #ba3e51;
}

.NoteButtons .Pin svg {
	width: 16px;
	height: 16px;
	stroke: #C7C4C4;
	fill: none;
	stroke-width: 2px;
}

.NoteButtons .Pin:hover svg {
	stroke: #9f9c9c;
}

.__Pinned .NoteButtons .Pin svg {
	stroke: #F0CE15;
}

.LinkChecker_VirtualTable_Headers {
	display: flex;
	flex: 1 1 auto;
	justify-content: flex-start;
	align-items: center;
}

.LinkChecker_VirtualTable_Header_Status {
	display: flex;
	justify-content: flex-start;
	align-items: center;
	max-width: 110px;
	margin-left: 20px;
}

.LinkChecker_VirtualTable_Header_OriginUrl {
	display: flex;
	justify-content: flex-start;
	align-items: center;
	max-width: 125px;
}

.LinkChecker_VirtualTable_Header_LinkUrl {
	display: flex;
	justify-content: flex-start;
	align-items: center;
	max-width: 300px;
}

.LinkChecker_VirtualTable_Header_LinkText {
	display: flex;
	justify-content: flex-start;
	align-items: center;
	max-width: 150px;
}

.LinkChecker_VirtualTable_Header_Fill {
	display: flex;
	justify-content: flex-end;
	align-items: center;
	min-width: 80px;
}

.LinkChecker_StartScan_Header {
	display: flex;
	flex: 1;
	flex-direction: row;
	justify-content: space-between;
	align-items: center;
	padding: 20px;
}

